k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antrag-service
  labels:
    app: antrag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antrag-service
  template:
    metadata:
      labels:
        app: antrag-service
    spec:
      containers:
        - name: antrag-service
          image: ghcr.io/agile-software-engineering-25/team-06-backend-antrag-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /api/antrag # you might need to change this to a health endpoint of your application
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/antrag # you might need to change this to a health endpoint of your application
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          env: # add environment variables here if needed
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: db-credentials
                  key: POSTGRES_USER
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-credentials
                  key: POSTGRES_PASSWORD
