k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antrag-service
  labels:
    app: antrag-service
spec:
  selector:
    app: antrag-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
